Update ReservationService, Repo and controller